test/oscar/compiler/errors/actorAlreadyDeclared.oscar
message testNow()


actor Tester() {
  
  receive = {
    | testNow() => {
        println("Error");
    }
  }
}

actor Tester() {
  
  receive = {
    | testNow() => {
        println("Error");
    }
  }
}

def main() => unit = {
  actor<Tester> tester1 = spawn actor<Tester>();
  message<testNow>() |> tester1;
}